<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/user_banner"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#d9d9d9"
        app:layout_scrollFlags="scroll"
        tools:layout_editor_absoluteY="81dp">


        <ImageView
            android:id="@+id/banner_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/queen"/>

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="2dp"
            android:text="Your User Profile"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/raf_blue"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/banner_img"
            tools:text="@string/enter_user_information"/>

        <TextView
            android:id="@+id/message_area"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="2dp"
            android:text="@string/notification_area"
            android:textAlignment="center"
            android:textColor="@color/raf_blue"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_header"/>

        <!-- form labels -->
        <TextView
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@color/background_light"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:text="@string/first_name"
            android:textColor="@color/raf_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_area"/>

        <TextView
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/background_light"
            android:gravity="end"
            android:padding="8dp"
            android:text="@string/last_name"
            android:textColor="@color/raf_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name"/>

        <TextView
            android:id="@+id/rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/background_light"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:paddingEnd="4dp"
            android:paddingBottom="8dp"
            android:text="@string/rank"
            android:textColor="@color/raf_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name"/>

        <!-- buttons -->

        <Button
            android:id="@+id/btn_modify_user"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:background="@color/raf_blue"
            android:text="modify"
            android:textColor="@color/raf_gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rank"/>

        <!-- textviews to display user data that is already set -->

        <TextView
            android:id="@+id/tv_set_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@color/background_light"
            android:gravity="left"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp"
            android:text="Owen"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/message_area"/>

        <TextView
            android:id="@+id/tv_set_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/background_light"
            android:gravity="left"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp"
            android:text="Clegg"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_set_first_name"/>

        <TextView
            android:id="@+id/tv_set_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/background_light"
            android:gravity="left"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp"
            android:text="Corporal"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_set_last_name"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp"/>

        <EditText
            android:id="@+id/et_new_first_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="@color/background_light"
            android:ems="10"
            android:hint="enter first name"
            android:inputType="textPersonName|textCapWords"
            android:padding="0dp"
            android:paddingStart="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/first_name"/>

        <EditText
            android:id="@+id/et_new_last_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="@color/background_light"
            android:ems="10"
            android:hint="enter last name"
            android:inputType="textPersonName|textCapWords"
            android:padding="0dp"
            android:paddingStart="8dp"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/last_name"/>

        <EditText
            android:id="@+id/et_new_rank"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="32dp"
            android:background="@color/background_light"
            android:ems="10"
            android:hint="select your rank"
            android:inputType="textCapWords"
            android:padding="0dp"
            android:paddingStart="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/rank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/rank"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>